[gd_scene load_steps=18 format=3 uid="uid://cqu3g6ylilnec"]

[ext_resource type="Script" path="res://Managers/Job manager/Job Display/Job_offer_display.gd" id="1_hvndf"]
[ext_resource type="Texture2D" uid="uid://bwdgxft8swypq" path="res://Assets/Pictures/temp_place_holder_job_image.PNG" id="2_h2omr"]
[ext_resource type="Texture2D" uid="uid://f2npnpspr7ya" path="res://Assets/Pictures/Clock sprite.png" id="3_rfyb6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_caupr"]
bg_color = Color(0.245583, 0.490762, 0.218239, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_odpkp"]
bg_color = Color(0.408482, 0.802515, 0.364824, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7im5c"]
bg_color = Color(0.788183, 0.589018, 0.307577, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a1f1f"]
bg_color = Color(0.513726, 0.592157, 0.819608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hmvoe"]
bg_color = Color(0.364706, 0.541176, 0.211765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s50sp"]
bg_color = Color(0.556863, 0.0862745, 0.0627451, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xtxvc"]
bg_color = Color(0.98111, 0.426076, 0.36165, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hg1g"]
bg_color = Color(0.307606, 0.0291281, 0.0185499, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_soler"]
bg_color = Color(0.258824, 0.482353, 0.741176, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mf78m"]
bg_color = Color(0.407487, 0.622991, 0.876346, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fk27a"]
bg_color = Color(0.0742651, 0.187356, 0.31487, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jcck4"]
bg_color = Color(0.388235, 0.65098, 0.678431, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1a440"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fk362"]
bg_color = Color(0.345098, 0.682353, 0.494118, 1)

[node name="Job Offer Display" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hvndf")

[node name="Background shadow" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.049
anchor_right = 0.967
anchor_bottom = 0.967
offset_top = 0.079998
offset_right = 0.359863
offset_bottom = -0.360107
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_caupr")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.032
anchor_top = 0.06
anchor_right = 0.961
anchor_bottom = 0.956
offset_left = -0.440002
offset_top = 0.199997
offset_right = -0.119995
offset_bottom = -0.47998
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_odpkp")

[node name="Information Display" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.278
anchor_top = 0.09
anchor_right = 0.707
anchor_bottom = 0.814
offset_left = 0.239929
offset_top = -0.200005
offset_right = 0.559937
offset_bottom = -0.119995

[node name="Information Display Background" type="Panel" parent="Information Display"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7im5c")

[node name="Placeholder Image" type="TextureRect" parent="Information Display"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.072
anchor_top = 0.096
anchor_right = 0.947
anchor_bottom = 0.704
offset_left = -0.328003
offset_top = -0.0719986
offset_right = -0.328003
offset_bottom = 0.471985
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h2omr")
expand_mode = 1

[node name="Job Name" type="Label" parent="Information Display"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.498
anchor_top = 0.013
anchor_right = 0.498
anchor_bottom = 0.013
offset_left = -299.352
offset_top = -0.166
offset_right = 298.648
offset_bottom = 59.834
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_a1f1f")
text = "Job Name place holder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time Left To Accept" type="Label" parent="Information Display"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.744
anchor_right = 0.025
anchor_bottom = 0.744
offset_left = 3.696
offset_top = 0.192017
offset_right = 216.4
offset_bottom = 57.192
theme_override_font_sizes/font_size = 22
text = "Time Left To Accept:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timeout Progressbar" type="ProgressBar" parent="Information Display"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.295
anchor_top = 0.738
anchor_right = 0.915
anchor_bottom = 0.807
offset_left = -0.0800171
offset_top = -0.116028
offset_right = 0.039978
offset_bottom = -0.0740356
value = 100.0
show_percentage = false

[node name="Progress Label" type="Label" parent="Information Display/Timeout Progressbar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.998
anchor_bottom = 1.0
offset_right = 0.0440063
grow_horizontal = 2
grow_vertical = 2
text = "show remaining time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Clock Sprite" type="TextureRect" parent="Information Display"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.012
anchor_top = 0.866
anchor_right = 0.012
anchor_bottom = 0.866
offset_left = 0.124
offset_top = -0.366028
offset_right = 95.124
offset_bottom = 89.634
texture = ExtResource("3_rfyb6")
expand_mode = 1

[node name="Total Time To Do Job" type="Label" parent="Information Display"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.015
anchor_top = 0.821
anchor_right = 0.015
anchor_bottom = 0.821
offset_left = -0.360001
offset_top = -0.0219727
offset_right = 84.64
offset_bottom = 41.978
theme_override_font_sizes/font_size = 22
text = "5H30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Base Pay Background" type="Panel" parent="Information Display"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.372
anchor_top = 0.903
anchor_right = 0.372
anchor_bottom = 0.903
offset_left = -0.156006
offset_top = -0.153015
offset_right = 132.844
offset_bottom = 57.847
theme_override_styles/panel = SubResource("StyleBoxFlat_hmvoe")

[node name="Base Pay" type="Label" parent="Information Display/Base Pay Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "Base Pay"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Decline" type="Button" parent="Information Display"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.56
anchor_top = 0.893
anchor_right = 0.56
anchor_bottom = 0.893
offset_left = 0.119995
offset_top = 0.356934
offset_right = 130.12
offset_bottom = 65.3569
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_s50sp")
theme_override_styles/hover = SubResource("StyleBoxFlat_xtxvc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6hg1g")
text = "Decline"

[node name="Button" type="Button" parent="Information Display"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.738
anchor_top = 0.895
anchor_right = 0.738
anchor_bottom = 0.895
offset_left = -0.374023
offset_top = -0.14502
offset_right = 128.626
offset_bottom = 64.855
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_soler")
theme_override_styles/hover = SubResource("StyleBoxFlat_mf78m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fk27a")
text = "Accept"

[node name="Size Information" type="Label" parent="Information Display"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.155
anchor_top = 0.908
anchor_right = 0.155
anchor_bottom = 0.908
offset_left = 0.279999
offset_top = -0.0560303
offset_right = 116.28
offset_bottom = 45.944
theme_override_font_sizes/font_size = 22
text = "Size:"

[node name="Background For Left_Right  Buttons" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.286
anchor_top = 0.833
anchor_right = 0.699
anchor_bottom = 0.931
offset_left = 0.880005
offset_top = 0.359924
offset_right = -0.0800781
offset_bottom = 0.519958
theme_override_styles/panel = SubResource("StyleBoxFlat_jcck4")

[node name="Left Button" type="Button" parent="Background For Left_Right  Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.051
anchor_top = 0.5
anchor_right = 0.051
anchor_bottom = 0.5
offset_left = -0.392002
offset_top = -34.0
offset_right = 133.608
offset_bottom = 37.0
grow_vertical = 2
text = "Left"

[node name="Right Button" type="Button" parent="Background For Left_Right  Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.947
anchor_top = 0.505
anchor_right = 0.947
anchor_bottom = 0.505
offset_left = -148.024
offset_top = -38.53
offset_right = -12.024
offset_bottom = 37.47
grow_horizontal = 0
grow_vertical = 2
text = "Right"

[node name="Job Counter" type="Label" parent="Background For Left_Right  Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.408
anchor_top = 0.226
anchor_right = 0.585
anchor_bottom = 0.868
offset_left = -0.135956
offset_top = 0.0439987
offset_right = -0.319946
offset_bottom = -0.00800323
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_1a440")
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="No Job Offers" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.99
offset_right = -2.0
offset_bottom = -0.200073

[node name="Background" type="Panel" parent="No Job Offers"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fk362")

[node name="Text" type="Label" parent="No Job Offers"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 56
text = "No job offers for now. Check again later"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.855
anchor_top = 0.075
anchor_right = 0.956
anchor_bottom = 0.173
offset_left = -0.60022
offset_right = -0.78418
offset_bottom = 0.233994
grow_horizontal = 0
text = "Close"

[connection signal="pressed" from="Information Display/Decline" to="." method="decline_job_offer"]
[connection signal="pressed" from="Background For Left_Right  Buttons/Left Button" to="." method="get_previous_job_offer_in_order"]
[connection signal="pressed" from="Background For Left_Right  Buttons/Right Button" to="." method="get_next_job_offer_in_order"]
[connection signal="pressed" from="Close" to="." method="close_menu"]
